--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-navbar></app-navbar>
-<app-lancamentos-pesquisa></app-lancamentos-pesquisa>
+
+<!-- <app-person-form></app-person-form> -->
+
+<app-sale-form></app-sale-form>
+
+<!--<app-lancamentos-pesquisa></app-lancamentos-pesquisa>-->
