--- a/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -25,11 +25,19 @@
       <p-dataTable [value]="lancamentos" [rows]="5" [paginator]="true" [responsive]="true">
         <p-column field="pessoa" header="Pessoa"></p-column>
         <p-column field="descricao" header="Descrição"></p-column>
-        <p-column field="dataVencimento" header="Data de Vencimento" styleClass="col-data"></p-column>
-        <p-column field="dataPagamento" header="Data de Pagamento" styleClass="col-data"></p-column>
-        <p-column field="valor" header="Valor" styleClass="col-valor">
+        <p-column field="dataVencimento | date:'dd/MM/y'" header="Data de Vencimento" styleClass="col-data">
           <ng-template let-lancamento="rowData" pTemplate="body">
-            <span [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{lancamento.valor}}</span>
+            <span>{{ lancamento.dataVencimento | date:'dd/MM/y' }}</span>
+          </ng-template>
+        </p-column>
+        <p-column field="dataPagamento | date:'dd/MM/y'" header="Data de Pagamento" styleClass="col-data">
+          <ng-template let-lancamento="rowData" pTemplate="body">
+            <span>{{ lancamento.dataPagamento | date:'dd/MM/y' }}</span>
+          </ng-template>
+        </p-column>
+        <p-column field="valor | currency:'BRL':true" header="Valor" styleClass="col-valor">
+          <ng-template let-lancamento="rowData" pTemplate="body">
+            <span [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{lancamento.valor | currency:'BRL':true}}</span>
           </ng-template>
         </p-column>
         <p-column styleClass="col-acoes">
