--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,19 @@ label {
   font-weight: bold;
 }
 
+a {
+  color: #337ab7;
+  text-decoration: none;
+}
+
+a:hover, a:focus {
+  text-decoration: underline;
+}
+
+.ui-dropdown-filter-container {
+  width: 100%;
+}
+
 @media (min-width: 1200px){
   .container {
     width: 1170px;
