creating message component

--- a/src/app/person-form/person-form.component.html
+++ b/src/app/person-form/person-form.component.html
@@ -9,22 +9,33 @@
 
       <div class="ui-g-12 ui-fluid">
         <label>Nome</label>
-        <input pInputText type="text">
+        <input pInputText type="text" name="name" ngModel #name="ngModel" required minlength="5">
+        <app-message [control]="name" error="required"
+                     text="Informe um nome"></app-message>
+        <app-message [control]="name" error="minlength"
+                     text="Mínimo de {{ name.errors?.minlength?.requiredLength }} caracteres."></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>CEP</label>
-        <p-inputMask mask="99.999-999" placeholder="99.999-999"></p-inputMask>
+        <p-inputMask mask="99.999-999" placeholder="99.999-999" name="zipCode"
+                     ngModel #zipCode="ngModel" required></p-inputMask>
+        <app-message [control]="zipCode" error="required"
+                     text="Informe o CEP"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-8 ui-fluid">
         <label>Logradouro</label>
-        <input pInputText type="text">
+        <input pInputText type="text" name="street" ngModel #street="ngModel" required>
+        <app-message [control]="street" error="required"
+                     text="Informe o logradouro"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>Número</label>
-        <input pInputText type="text">
+        <input pInputText type="text" name="number" ngModel #number="ngModel" required>
+        <app-message [control]="number" error="required"
+                     text="Informe o número"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
@@ -34,17 +45,24 @@
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>Bairro</label>
-        <input pInputText type="text">
+        <input pInputText type="text" name="neiborhood" ngModel #neiborhood="ngModel" required>
+        <app-message [control]="neiborhood" error="required"
+                     text="Informe o bairro"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>Estado</label>
-        <p-dropdown [options]="states" [autoWidth]="false" placeholder="Selecione"></p-dropdown>
+        <p-dropdown [options]="states" [autoWidth]="false" placeholder="Selecione"
+                    name="state" ngModel #state="ngModel" required></p-dropdown>
+        <app-message [control]="state" error="required"
+                     text="Informe o estado"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-8 ui-fluid">
         <label>Cidade</label>
-        <input pInputText type="text">
+        <input pInputText type="text" name="city" ngModel #city="ngModel" required>
+        <app-message [control]="city" error="required"
+                     text="Informe a cidade"></app-message>
       </div>
 
       <div class="ui-g-12">
