--- a/src/app/sale-form/sale-form.component.html
+++ b/src/app/sale-form/sale-form.component.html
@@ -13,7 +13,9 @@
       <div class="ui-g-6 ui-md-3 ui-fluid">
         <label>Vencimento</label>
         <p-calendar dateFormat="dd/mm/yy" [inline]="false"
-          [readonlyInput]="true" [showIcon]="true"></p-calendar>
+          [readonlyInput]="true" [showIcon]="true" name="dueDate" ngModel #dueDate="ngModel"></p-calendar>
+        <app-message [control]="dueDate" error="required"
+                     text="Informe uma data de vencimento"></app-message>
       </div>
       <div class="ui-g-6 ui-md-3 ui-fluid">
         <label>{{type.value === 'INCOME' ? 'Recebimento' : 'Pagamento'}}</label>
@@ -23,15 +25,10 @@
       <div class="ui-g-12 ui-md-9 ui-fluid">
         <label>Descrição</label>
         <input pInputText type="text" name="description" ngModel #description="ngModel" required minlength="5">
-
-        <div *ngIf="description.hasError('required') && description.dirty"
-             class="ui-message ui-messages-error">
-          Informe uma descrição
-        </div>
-        <div *ngIf="description.hasError('minlength') && description.dirty"
-             class="ui-message ui-messages-error">
-          Mínimo de {{ description.errors.minlength.requiredLength }} caracteres.
-        </div>
+          <app-message [control]="description" error="required"
+              text="Informe uma descrição"></app-message>
+          <app-message [control]="description" error="minlength"
+              text="Mínimo de {{ description.errors?.minlength?.requiredLength }} caracteres."></app-message>
       </div>
       <div class="ui-g-12 ui-md-3 ui-fluid">
         <label>Valor</label>
